--- a/frontend/front/style/profile.css
+++ b/frontend/front/style/profile.css
@@ -37,7 +37,7 @@
 }
 .ProfileAndMatches{
     height: 100%;
-    width: 50rem;
+    width: 65rem;
     overflow: hidden;
    
 }
@@ -50,9 +50,8 @@
     background: linear-gradient(rgba(255, 255, 255, 0.215), rgba(255, 255, 255, 0));
     backdrop-filter: blur(4px);
     border-radius: 10px;
-    font-family: 'Baloo_Bhai_2';
+    font-family: 'celesti';
     margin-top: 10rem;
-    padding-bottom: 37rem;
 
     display: flex;
     align-items: center;
@@ -60,10 +59,28 @@
     justify-content: center;
 }
 .ProfileImg{
-    height: 100%;
-    width: 100%;
+	height: 25rem;
+    width: 29rem;
     border : 1px solid white;
     border-radius: 15px;
+}
+.Profile1 h1{
+	font-size: 3rem;
+	font-family: 'celesti';
+	margin-top: 1rem;
+}
+.AddFriends{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 80%;
+}
+.AddFriends a{
+	text-decoration: none;
+	color: white;
+	font-size: 1.5rem;
+	font-family: 'Baloo_Bhai_2';
 }
 .LastMatches{
     height: 30rem;
