--- a/frontend/front/style/profile.css
+++ b/frontend/front/style/profile.css
@@ -69,12 +69,17 @@
 	font-family: 'celesti';
 	margin-top: 1rem;
 }
+.Profile1 p{
+    font-size: 1.5rem;
+    font-family: 'Baloo_Bhai_2';
+}
 .AddFriends{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	width: 80%;
+	width: 90%;
+    /* padding-bottom: 2rem; */
 }
 .AddFriends a{
 	text-decoration: none;
@@ -94,6 +99,23 @@
     font-family: 'Baloo_Bhai_2';
     margin-top: 2rem;
     padding-bottom: 25rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.MatchHistory{
+    display: flex;
+    margin-top: 2rem;
+    margin-left: 20px;
+    background: linear-gradient(to left,rgba(255, 64, 64, 0.200),rgba(255, 0, 0, 0));
+    width: 30vw;
+    height: 6vh;
+    border-right: rgb(255, 0, 0) solid 4px;
+    flex-direction: center;
+    align-items: center;
+    justify-content: center;
+
 }
 .Matche{
     height: 20rem;
@@ -107,5 +129,28 @@
     font-family: 'Baloo_Bhai_2';
     margin-bottom: 10rem;
     margin-right:20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2%;
+
+}
+
+.Matche h1{
+    font-size: 3rem;
+    font-family: 'celesti';
+    margin-top: 1rem;
+}
+.Matche h3{
+    font-size: 1.5rem;
+    font-family: 'Baloo_Bhai_2';
+}
+.Matche p{
+    font-size: 2rem;
+    font-family: 'Baloo_Bhai_2';
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
 }
 
