--- a/frontend/front/style/online.css
+++ b/frontend/front/style/online.css
@@ -12,10 +12,12 @@
     gap: 2rem;
     color: white;
     font-size: 3rem;
+    font-family: 'celesti';
 }
 
 .waiting button {
     font-size: 2rem;
     border-radius: 10px;
     padding: 5px 15px 5px;
+    font-family: 'Baloo_bhai_2';
 }
