--- a/frontend/front/style/profile.css
+++ b/frontend/front/style/profile.css
@@ -32,8 +32,12 @@
 .trophie-type{
     height: 50%;
     width: 50%;
-    border : 1px solid white;
+    /* border : 1px solid white; */
     border-radius: 15px;
+    transition: transform 0.5s ease;
+}
+.trophie-type:hover{
+    transform: scale(1.2);
 }
 .ProfileAndMatches{
     height: 100%;
@@ -155,5 +159,27 @@
 }
 .Score span{
     color:rgb(72, 255, 0);
+}
+
+.accept{
+    display: flex;
+    justify-content: flex-end;
+    border-style: solid;
+    border-color: white;
+    color: white;
+    border-radius: 11px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-width: 0.5px;
+    font-size: large;
+    font-family: 'Baloo_Bhai_2';
+    background-color: transparent;
+    cursor: pointer;
+}
+.accept:hover{
+    background-color: rgb(0,250,0);
+    color: white;
 }
 
