--- a/frontend/front/style/trans.css
+++ b/frontend/front/style/trans.css
@@ -523,6 +523,17 @@ button.join:hover .flech {
     }
     
 }
+@keyframes slideLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
 .profile button{
     border: none;
     border-radius: 12px;
