--- a/frontend/front/style/profile.css
+++ b/frontend/front/style/profile.css
@@ -43,7 +43,8 @@
     height: 100%;
     width: 65rem;
     overflow: hidden;
-   
+    
+
 }
 .Profile1{
     height: 40rem;
@@ -92,34 +93,47 @@
 	font-family: 'Baloo_Bhai_2';
 }
 .LastMatches{
-    height: 30rem;
-    width: 100%;
+    width: 83%;
+    height: 0;
     animation : slideUp 1.1s ease;
-
+    padding-top: 1%;
     border: 0.5px solid rgba(255, 255, 255, 0.292);
     background: linear-gradient(rgba(255, 255, 255, 0.215), rgba(255, 255, 255, 0));
     backdrop-filter: blur(4px);
     border-radius: 10px;
     font-family: 'Baloo_Bhai_2';
     margin-top: 2rem;
+    margin-left: 5rem;
     padding-bottom: 25rem;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    
 
 }
+.LastMatches::-webkit-scrollbar {
+    display: none;
+}
+
 .MatchHistory{
     display: flex;
-    margin-top: 2rem;
-    margin-left: 20px;
     background: linear-gradient(to left,rgba(255, 64, 64, 0.200),rgba(255, 0, 0, 0));
     width: 30vw;
-    height: 6vh;
+    height: 8vh;
+    margin-top: 1%;
     border-right: rgb(255, 0, 0) solid 4px;
     flex-direction: center;
     align-items: center;
     justify-content: center;
+    
 
+}
+.MatchHistory img{
+    border-radius: 10%;
+    margin-right: 1rem;
 }
 .Matche{
     height: 20rem;
@@ -152,13 +166,13 @@
 }
 .Matche p, .MatchHistory p{
     font-size: 2rem;
-    font-family: 'Baloo_Bhai_2';
+    font-family: 'bungee';
     display: flex;
     width: 50%;
     justify-content: space-evenly;
 }
 .Score span{
-    color:rgb(72, 255, 0);
+    color:rgb(255, 255, 255);
 }
 
 .accept{
