--- a/frontend/front/style/chat.css
+++ b/frontend/front/style/chat.css
@@ -159,24 +159,38 @@
     display: flex;
     justify-content: start;
     align-items: right;
-    /* display: flex; */
-    /* flex: 1;
-    overflow-y: auto; */
-    /* text-align: right; */
     padding: 10px;
-    /* margin-bottom: 10px; */
+
 }
 .left-para {
-    /* display: flex; */
-    /* flex: 1;
-    overflow-y: auto; */
-    /* text-align: left; */
     display: flex;
     justify-content: start;
     align-items: left;
     padding: 10px;
-    /* margin-bottom: 10px; */
 }
+
+
+/* .right-para {
+    display: flex;
+    justify-content: flex-end;  
+    align-items: center;        
+    padding: 10px;
+    background-color: #daf8e3;  
+    border-radius: 10px;
+    margin-left: auto;         
+    max-width: 60%;          
+}
+
+.left-para {
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center;        
+    padding: 10px;
+    background-color: #f1f1f1;   
+    border-radius: 10px;
+    margin-right: auto;         
+    max-width: 60%;             
+} */
 
 /*#message-display p {
     margin: 5px 0;
