--- a/frontend/front/style/chat.css
+++ b/frontend/front/style/chat.css
@@ -19,8 +19,8 @@
     display : flex;
     width: 55%;
     height: 69%;
+    backdrop-filter: blur(15px);
     background: linear-gradient(rgba(255, 255, 255, 0.22), rgba(255, 255, 255, 0.003));
-    backdrop-filter: blur(5%);
     border: 1px solid rgba(255, 255, 255, 0.2);
     animation: slideUp 0.8s ease;
 }
@@ -50,9 +50,7 @@
     align-items: start;
     width: 100%;
     height: 85%;
-    /* border: 3px solid rgb(255, 0, 0); */
     padding: 10px;
-    padding-top: 50px;
 
 }
 
@@ -65,11 +63,9 @@
 }
 #chat_area{
     width: 100%;
-    height: 75%;
-    /* height: 300px; */
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 10px;
     overflow: auto;
     scrollbar-width: none; 
@@ -80,12 +76,11 @@
 }
 #input_area{
     width: 100%;
-    height: 10%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    /* border : 3px solid rgb(0, 0, 255); */
 }
 #message{
     width: 89%;
@@ -186,44 +181,40 @@
 
 .right-para {
 
-    background-color: rgba(93, 93, 93, 1);
+    border: 0.5px solid white;
     align-self: flex-end;
     margin-left: auto;
     margin-right: 10px; /* Space from the edge */
     text-align: right;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    padding: 15px;
+    border-radius: 50px;
+    padding: 5px 10px 5px 10px;
     max-width: 60%;
     word-wrap: break-word;
     margin-bottom: 15px;
     font-size: 20px;
+    font-family: 'Baloo_Bhai_2';
 
 }
 .left-para {
-    /* display: flex;
-    justify-content: start;
-    align-items: left;
-    padding: 10px; */
-    /* background-color: transparent; Example background color for receiver */
     align-self: flex-start;
-    background-color:rgb(0, 0, 0);
+    border: 0.5px solid white;
+
     margin-right: auto;
     margin-left: 10px; /* Space from the edge */
     text-align: left;
-    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); */
-    border-radius: 10px;
-    padding: 15px;
+    border-radius: 30px;
+    padding: 5px 10px 5px 10px;
     max-width: 60%;
     word-wrap: break-word;
     margin-bottom: 15px;
     font-size: 20px;
-
+    font-family: 'Baloo_Bhai_2';
 }
 
 #chat_header{
     width: 100%;
-    height: 15%;
+    height: 14%;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -234,8 +225,7 @@
     align-items: center;
     font-size: 2rem;
     font-family: 'bungee';
-    /* border-bottom : 0.5px solid rgb(255, 255, 255); */
-    /* background-color: rgba(255, 255, 255, 0.2); */
+    background-color: rgb(34 34 34 / 22%);  
 }
 
 /* .right-para {
