--- a/frontend/front/style/profile.css
+++ b/frontend/front/style/profile.css
@@ -82,7 +82,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 	width: 90%;
     /* padding-bottom: 2rem; */
 }
