--- a/frontend/front/style/game.css
+++ b/frontend/front/style/game.css
@@ -60,8 +60,8 @@
     position: absolute; 
     top: 50%;
     left: 50%;
-    height: 2rem;
-    width: 2rem;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -79,6 +79,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 30%;
 }
 
 .profile-pic {
